# wherewent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.handoff/: DESIGN-v3-hardening.md  DESIGN-v3-original.md  HANDOFF-v3-hardening.md
demo/: __init__.py  async_naive_job.py  benchmark.py  fixed_job.py  naive_job.py  run_units.py  unit_job.py
src/wherewent/: __init__.py  callsite.py  cli.py  normalize.py  recorder.py  report.py  rules.py  stats.py
src/wherewent/_shim/: __init__.py  sitecustomize.py
tests/: test_async_callsite.py  test_callsite.py  test_hardening.py  test_normalize.py  test_one_shot.py  test_peek.py  test_rules.py  test_rules_cluster.py  test_unit_profiling.py
